--- a/src/app/pages/faq/faq.page.html
+++ b/src/app/pages/faq/faq.page.html
@@ -1,13 +1,41 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>faq</ion-title>
+<ion-menu contentId="main-content" type="overlay">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Menú</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item [routerLink]="'/inicio'" (click)="menu.close()">Inicio</ion-item>
+      <ion-item [routerLink]="'/conceptos'" (click)="menu.close()">Conceptos</ion-item>
+      <ion-item [routerLink]="'/preguntas-frecuentes'" (click)="menu.close()">Preguntas Frecuentes</ion-item>
+      <ion-item [routerLink]="'/contacto'" (click)="menu.close()">Contacto</ion-item>
+      <ion-item (click)="logout()">Cerrar sesión</ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Preguntas Frecuentes</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="logout()">
+        <ion-icon name="log-out-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">faq</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content id="main-content" class="ion-padding">
+  <ion-card *ngFor="let pregunta of preguntas">
+    <ion-card-header>
+      <ion-card-title>{{ pregunta.pregunta }}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      {{ pregunta.respuesta }}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
