--- a/src/app/pages/conceptos/conceptos.page.html
+++ b/src/app/pages/conceptos/conceptos.page.html
@@ -1,16 +1,41 @@
+<ion-menu contentId="main-content" type="overlay">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Menú</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item [routerLink]="'/inicio'" (click)="menu.close()">Inicio</ion-item>
+      <ion-item [routerLink]="'/conceptos'" (click)="menu.close()">Conceptos</ion-item>
+      <ion-item [routerLink]="'/preguntas-frecuentes'" (click)="menu.close()">Preguntas Frecuentes</ion-item>
+      <ion-item [routerLink]="'/contacto'" (click)="menu.close()">Contacto</ion-item>
+      <ion-item (click)="logout()">Cerrar sesión</ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Conceptos</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="logout()">
+        <ion-icon name="log-out-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding" id="main-content">
+<ion-content id="main-content" class="ion-padding">
   <ion-card *ngFor="let concepto of conceptos">
     <ion-card-header>
-      <ion-card-title>{{ concepto.titulo }}</ion-card-title>
+      <ion-card-title>
+        <img *ngIf="concepto.imagen" [src]="concepto.imagen" alt="icono" style="height: 32px; vertical-align: middle; margin-right: 8px;" />
+        {{ concepto.titulo }}
+      </ion-card-title>
     </ion-card-header>
     <ion-card-content>
       {{ concepto.descripcion }}
